--- a/PaperAppV2/GoogleService-Info.plist
+++ b/PaperAppV2/GoogleService-Info.plist
@@ -3,17 +3,17 @@
 <plist version="1.0">
 <dict>
 	<key>API_KEY</key>
-	<string>AIzaSyBX2cyUxfpuAcxHixg0KyTUgoQ040yzedo</string>
+	<string>AIzaSyCuGmMOBSdYxfaYAFdezW03nsdMPOq_Xk4</string>
 	<key>GCM_SENDER_ID</key>
-	<string>128137661817</string>
+	<string>244305898637</string>
 	<key>PLIST_VERSION</key>
 	<string>1</string>
 	<key>BUNDLE_ID</key>
-	<string>sothesom.PaperAppV2</string>
+	<string>PaperApp</string>
 	<key>PROJECT_ID</key>
-	<string>paperappv2</string>
+	<string>paperapp-3ae3d</string>
 	<key>STORAGE_BUCKET</key>
-	<string>paperappv2.firebasestorage.app</string>
+	<string>paperapp-3ae3d.firebasestorage.app</string>
 	<key>IS_ADS_ENABLED</key>
 	<false></false>
 	<key>IS_ANALYTICS_ENABLED</key>
@@ -25,6 +25,6 @@
 	<key>IS_SIGNIN_ENABLED</key>
 	<true></true>
 	<key>GOOGLE_APP_ID</key>
-	<string>1:128137661817:ios:41a9933daf46ee451b33a8</string>
+	<string>1:244305898637:ios:1af3e036347788269006c4</string>
 </dict>
 </plist>
