--- a/PaperAppV2/Info.plist
+++ b/PaperAppV2/Info.plist
@@ -2,34 +2,21 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
-    <key>API_KEY</key>
-    <string>AIzaSyCuGmMOBSdYxfaYAFdezW03nsdMPOq_Xk4</string>
-    <key>GCM_SENDER_ID</key>
-    <string>244305898637</string>
-    <key>PLIST_VERSION</key>
-    <string>1</string>
-    <key>BUNDLE_ID</key>
-    <string>PaperApp</string>
-    <key>PROJECT_ID</key>
-    <string>paperapp-3ae3d</string>
-    <key>STORAGE_BUCKET</key>
-    <string>paperapp-3ae3d.firebasestorage.app</string>
-    <key>IS_ADS_ENABLED</key>
-    <false></false>
-    <key>IS_ANALYTICS_ENABLED</key>
-    <false></false>
-    <key>IS_APPINVITE_ENABLED</key>
-    <true></true>
-    <key>IS_GCM_ENABLED</key>
-    <true></true>
-    <key>IS_SIGNIN_ENABLED</key>
-    <true></true>
-    <key>GOOGLE_APP_ID</key>
-    <string>1:244305898637:ios:1af3e036347788269006c4</string>
-    <key>CLIENT_ID</key>
-    <string>688104390263-950ln4jauo2f3cbimnmk4aat9siqdv3i.apps.googleusercontent.com</string>
-    <key>REVERSED_CLIENT_ID</key>
-    <string>com.googleusercontent.apps.688104390263-950ln4jauo2f3cbimnmk4aat9siqdv3i</string>
+    <!-- Update GIDClientID -->
+    <key>GIDClientID</key>
+    <string>586752234501-2gjvgq6hh6jishobkoa623hhfdlf7ld2.apps.googleusercontent.com</string>
+
+    <!-- Add URL Schemes section -->
+    <key>CFBundleURLTypes</key>
+    <array>
+        <dict>
+            <key>CFBundleURLSchemes</key>
+            <array>
+                <string>com.googleusercontent.apps.586752234501-2gjvgq6hh6jishobkoa623hhfdlf7ld2</string>
+            </array>
+            <key>CFBundleURLName</key>
+            <string>com.googleusercontent.apps.586752234501-2gjvgq6hh6jishobkoa623hhfdlf7ld2</string>
+        </dict>
+    </array>
 </dict>
 </plist>
-
