--- a/PaperAppV2/GoogleService-Info.plist
+++ b/PaperAppV2/GoogleService-Info.plist
@@ -3,9 +3,9 @@
 <plist version="1.0">
 <dict>
 	<key>CLIENT_ID</key>
-	<string>244305898637-s4ksac2cj17fiai2cdou9lo17pcrq4fp.apps.googleusercontent.com</string>
+	<string>586752234501-2gjvgq6hh6jishobkoa623hhfdlf7ld2.apps.googleusercontent.com</string>
 	<key>REVERSED_CLIENT_ID</key>
-	<string>com.googleusercontent.apps.244305898637-s4ksac2cj17fiai2cdou9lo17pcrq4fp</string>
+	<string> </string>
 	<key>API_KEY</key>
 	<string>AIzaSyCuGmMOBSdYxfaYAFdezW03nsdMPOq_Xk4</string>
 	<key>GCM_SENDER_ID</key>
@@ -19,15 +19,15 @@
 	<key>STORAGE_BUCKET</key>
 	<string>paperapp-3ae3d.firebasestorage.app</string>
 	<key>IS_ADS_ENABLED</key>
-	<false></false>
+	<false/>
 	<key>IS_ANALYTICS_ENABLED</key>
-	<false></false>
+	<false/>
 	<key>IS_APPINVITE_ENABLED</key>
-	<true></true>
+	<true/>
 	<key>IS_GCM_ENABLED</key>
-	<true></true>
+	<true/>
 	<key>IS_SIGNIN_ENABLED</key>
-	<true></true>
+	<true/>
 	<key>GOOGLE_APP_ID</key>
 	<string>1:244305898637:ios:1af3e036347788269006c4</string>
 </dict>
