--- a/PaperAppV2/Info.plist
+++ b/PaperAppV2/Info.plist
@@ -2,33 +2,19 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
-	<key>CLIENT_ID</key>
-	<string>244305898637-s4ksac2cj17fiai2cdou9lo17pcrq4fp.apps.googleusercontent.com</string>
-	<key>REVERSED_CLIENT_ID</key>
-	<string>com.googleusercontent.apps.244305898637-s4ksac2cj17fiai2cdou9lo17pcrq4fp</string>
-	<key>API_KEY</key>
-	<string>AIzaSyCuGmMOBSdYxfaYAFdezW03nsdMPOq_Xk4</string>
-	<key>GCM_SENDER_ID</key>
-	<string>244305898637</string>
-	<key>PLIST_VERSION</key>
-	<string>1</string>
-	<key>BUNDLE_ID</key>
-	<string>PaperApp</string>
-	<key>PROJECT_ID</key>
-	<string>paperapp-3ae3d</string>
-	<key>STORAGE_BUCKET</key>
-	<string>paperapp-3ae3d.firebasestorage.app</string>
-	<key>IS_ADS_ENABLED</key>
-	<false></false>
-	<key>IS_ANALYTICS_ENABLED</key>
-	<false></false>
-	<key>IS_APPINVITE_ENABLED</key>
-	<true></true>
-	<key>IS_GCM_ENABLED</key>
-	<true></true>
-	<key>IS_SIGNIN_ENABLED</key>
-	<true></true>
-	<key>GOOGLE_APP_ID</key>
-	<string>1:244305898637:ios:1af3e036347788269006c4</string>
+    <!-- Remove old CLIENT_ID and REVERSED_CLIENT_ID -->
+    <!-- Use only GIDClientID and CFBundleURLTypes from Firebase -->
+    <key>GIDClientID</key>
+    <string>244305898637-s4ksac2cj17fiai2cdou9lo17pcrq4fp.apps.googleusercontent.com</string>
+    <key>CFBundleURLTypes</key>
+    <array>
+        <dict>
+            <key>CFBundleURLSchemes</key>
+            <array>
+                <string>com.googleusercontent.apps.244305898637-s4ksac2cj17fiai2cdou9lo17pcrq4fp</string>
+            </array>
+        </dict>
+    </array>
+    <!-- Rest of your Info.plist settings remain the same -->
 </dict>
 </plist>
